--- a/app/src/main/res/layout/view_widget_seekbar.xml
+++ b/app/src/main/res/layout/view_widget_seekbar.xml
@@ -24,44 +24,52 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start|center"
-        android:gravity="start|center"
-        android:orientation="vertical"
-        android:paddingHorizontal="22dp"
-        android:paddingVertical="16dp">
+        android:orientation="horizontal">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/title"
-            style="?attr/textAppearanceTitleSmall"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|center"
-            android:textColor="?attr/colorOnPrimaryContainer" />
+            android:layout_weight="1"
+            android:gravity="start|center"
+            android:orientation="vertical"
+            android:paddingHorizontal="22dp"
+            android:paddingVertical="16dp">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/summary"
-            style="?attr/textAppearanceBodySmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center"
-            android:layout_marginTop="2dp"
-            android:alpha="0.8"
-            android:textColor="?attr/colorOnPrimaryContainer" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/title"
+                style="?attr/textAppearanceTitleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center"
+                android:textColor="?attr/colorOnPrimaryContainer" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/summary"
+                style="?attr/textAppearanceBodySmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center"
+                android:layout_marginTop="2dp"
+                android:alpha="0.8"
+                android:textColor="?attr/colorOnPrimaryContainer" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/reset"
+            android:layout_width="@dimen/reset_icon_size"
+            android:layout_height="@dimen/reset_icon_size"
+            android:layout_gravity="center|end"
+            android:layout_marginVertical="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="22dp"
+            android:alpha="0.4"
+            android:contentDescription="@string/reset"
+            android:foreground="?attr/selectableItemBackground"
+            android:src="@drawable/ic_reset"
+            app:tint="?attr/colorOnPrimaryContainer" />
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/reset"
-        android:layout_width="@dimen/reset_icon_size"
-        android:layout_height="@dimen/reset_icon_size"
-        android:layout_gravity="end|center"
-        android:layout_marginVertical="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="22dp"
-        android:alpha="0.4"
-        android:contentDescription="@string/reset"
-        android:foreground="?attr/selectableItemBackground"
-        android:src="@drawable/ic_reset"
-        app:tint="?attr/colorOnPrimaryContainer" />
 
 </com.google.android.material.card.MaterialCardView>
